docs(tapdata): record 1.0.0 qualification